--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     height: 1000px;
     width: 1500px;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(11, 1fr);
+    grid-template-columns: repeat(15, 1fr);
+    grid-template-rows: repeat(13, 1fr);
 }
 img {
     height: 100%;
@@ -11,5 +11,47 @@ img {
 }
 
 #fishflag-1 {
+    grid-column: 1 / 4;
+}
+#map-1 {
+    grid-column: 1 / 4;
+}
+#vase-short {
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+}
+#vase-tall {
+    grid-column: 1 /2;
+    grid-row: 3 / 7;
+}
+#bamboo-1 {
+    grid-column: 2 / 5;
+    grid-row: 3 / 6;
+}
+#quad-1 {
+    grid-row: 6 / 7;
+    grid-column: 2 / 5;
+}
+#monster-1 {
     grid-column: 1 / 3;
+    grid-row: 7 / 9;
+}
+#flag-1 {
+    grid-column: 3 / 5;
+    grid-row: 7 / 9;
+}
+#dolls-1 {
+    grid-column: 1 / 5;
+}
+#gate-1 {
+    grid-column: 1 / 4;
+    grid-row: 10 / 12;
+}
+#sushi-1 {
+    grid-row: 12 / 13;
+    grid-column: 1 / 4;
+}
+#sunrise-1 {
+    grid-column: 4 / 5;
+    grid-row: 10 / 13;
 }
