--- a/style.css
+++ b/style.css
@@ -55,3 +55,39 @@ img {
     grid-column: 4 / 5;
     grid-row: 10 / 13;
 }
+#lantern-1 {
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
+}
+#flag-2 {
+    grid-column: 7 / 9;
+    grid-row: 1 / 3;
+}
+#paint {
+    grid-row: 3 / 4;
+    grid-column: 5 / 9;
+}
+#mask-1 {
+    grid-column: 5 / 9;
+    grid-row: 4 / 7;
+}
+#sushi-2 {
+    grid-row: 7 / 8;
+    grid-column: 5 / 9;
+}
+#mask-2 {
+    grid-column: 5 / 7;
+    grid-row: 8 / 10;
+}
+#wave-1 {
+    grid-row: 8 / 10;
+    grid-column: 7 / 9;
+}
+#firstkimono {
+    grid-column: 5 / 9;
+    grid-row: 10 / 12;
+}
+#fishflag-2 {
+    grid-row: 12 / 13;
+    grid-column: 5 / 9;
+}
