--- a/style.css
+++ b/style.css
@@ -91,3 +91,34 @@ img {
     grid-row: 12 / 13;
     grid-column: 5 / 9;
 }
+#monster-2 {
+    grid-column: 9 / 13;
+    grid-row: 1 / 2;
+}
+#vase-3 {
+    grid-row: 2 / 3;
+    grid-column: 9 / 11;
+}
+#horn-1 {
+    grid-column: 11 / 13;
+    grid-row: 2 / 3;
+}
+#dolls-2 {
+    grid-column: 13 / 15;
+    grid-row: 1 / 3;
+}
+#lantern-2 {
+    grid-row: 3 / 6;
+    grid-column: 9 / 15;
+}
+#drink-1{
+    grid-row: 6 / 7;
+    grid-column: 9 / 11;
+}
+#sushi-3 {
+    grid-column: 11 / 13;
+    grid-row: 6 / 7;
+}
+#pagoda-1 {
+
+}
