--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     height: 1000px;
     width: 1500px;
     display: grid;
-    grid-template-columns: repeat(15, 1fr);
+    grid-template-columns: repeat(17, 1fr);
     grid-template-rows: repeat(13, 1fr);
 }
 img {
@@ -120,5 +120,57 @@ img {
     grid-row: 6 / 7;
 }
 #pagoda-1 {
+    grid-row: 7 / 9;
+    grid-column: 9 / 13;
+}
+#wave-2 {
+    grid-column: 13 / 15;
+    grid-row: 6 / 9;
+}
+#quad-2 {
+    grid-column: 9 / 15;
+}
+#horn-2 {
+    grid-row: 10 / 13;
+    grid-column: 9 / 11;
+}
+#pagoda-2 {
+    grid-column: 11 / 13;
+    grid-row: 12 / 13;
+
+}
+#bamboo-2 {
+    grid-column: 13 / 15;
+    grid-row: 12 / 13;
+}
+#tower {
+    grid-row: 10 / 12;
+    grid-column: 11 / 15;
+}
+#secondkimono {
+
+}
+#writing-1 {
+
+}
+#sunrise-2 {
+
+}
+#map-2 {
+
+}
+#gate-2 {
+
+}
+#writing-2 {
+
+}
+#lantern-3 {
+
+}
+#sake-2 {
+
+}
+#erupt {
 
 }
