--- a/style.css
+++ b/style.css
@@ -148,29 +148,31 @@ img {
     grid-column: 11 / 15;
 }
 #secondkimono {
-
+    grid-row: 1 / 3;
+    grid-column: 15 / 17;   
 }
 #writing-1 {
-
+    grid-column: 15 / 16;
+    grid-row: 3 / 4;
 }
 #sunrise-2 {
-
+    grid-column: 16 / 17;
 }
 #map-2 {
-
+    grid-column: 15 / 17;
 }
 #gate-2 {
-
+    grid-column: 15 / 17;
 }
-#writing-2 {
-
+#writing-2 {    
+    grid-column: 15 / 16;
 }
 #lantern-3 {
-
+    grid-column: 16 / 17;
 }
 #sake-2 {
-
+    grid-column: 15 / 17;
 }
 #erupt {
-
+    grid-column: 15 / 17;
 }
