--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #app {
-    height: 1000px;
-    width: 1500px;
+    height: 900px;
+    width: 1300px;
     display: grid;
     grid-template-columns: repeat(17, 1fr);
     grid-template-rows: repeat(13, 1fr);
@@ -157,22 +157,29 @@ img {
 }
 #sunrise-2 {
     grid-column: 16 / 17;
+    grid-row: 3 / 4;
 }
 #map-2 {
     grid-column: 15 / 17;
+    grid-row: 4 / 6;
 }
 #gate-2 {
     grid-column: 15 / 17;
+    grid-row: 6 / 8;
 }
 #writing-2 {    
     grid-column: 15 / 16;
+    grid-row: 8 / 11;
 }
 #lantern-3 {
     grid-column: 16 / 17;
+    grid-row: 8 / 11;
 }
 #sake-2 {
     grid-column: 15 / 17;
+    grid-row: 11 / 12;
 }
 #erupt {
     grid-column: 15 / 17;
+    grid-row: 12 / 13;
 }
